# Concinna

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md  cap_config_smoke.ini  cap_log_smoke.txt  clippy.toml  rust-toolchain.toml  test_matmul.rs  vcpkg.json
Capability/Algorithms/: CMakeLists.txt  README.md
Capability/Algorithms/Interface/: Algorithms.ixx  Policy.ixx  Primitives.ixx  Radix.ixx  Scan.ixx  Sort.ixx  Spatial.ixx
Capability/Algorithms/Sample/: AlgorithmsTest.cppm  Main.cpp
Capability/Concurrency/: CMakeLists.txt  README.md
Capability/Concurrency/Backends/Core/: Allocator.cppm  Counter.cppm  Driver.cppm  Event.cppm  Fiber.cppm  Job.cppm  Mutex.cppm  Parker.cppm  Scheduler.cppm  TaskGroup.cppm
Capability/Concurrency/Interface/: Allocator.ixx  Concurrency.ixx  Counter.ixx  Deque.ixx  Driver.ixx  Event.ixx  Fiber.ixx  Job.ixx  MPMCQueue.ixx  Mutex.ixx  Parker.ixx  Policy.ixx  Scheduler.ixx  TaskGroup.ixx
Capability/Concurrency/Samples/BatchSubmitDemo/: BatchSubmitDemo.cppm
Capability/Concurrency/Samples/DriverTimerIo/: DriverTimerIo.cppm
Capability/Concurrency/Samples/FiberStress/: FiberStress.cppm
Capability/Concurrency/Samples/HighPressure/: HighPressure.cppm
Capability/Containers/: CMakeLists.txt
Capability/Containers/Interface/: Containers.ixx  Deque.ixx  HashMap.ixx  Intrusive.ixx  RingBuffer.ixx  String.ixx  Traits.ixx  Vector.ixx
Capability/Crypto/: CMakeLists.txt  README.md
Capability/Crypto/Impl/: CRC.cppm  Hash.cppm  MD5.cppm  SHA256.cppm
Capability/Crypto/Interface/: CRC.ixx  Crypto.ixx  Hash.ixx  MD5.ixx  SHA256.ixx
Capability/Crypto/Sample/: CryptoTest.cppm
Capability/Math/: CHANGELOG.md  CMakeLists.txt  README.md  README_API.md  测试运行指南.md
Capability/Math/API/: Color.ixx  Compute.ixx  Geometry.ixx  LWC.ixx  Math.ixx  MatrixOps.ixx  Random.ixx  Spatial.ixx  Storage.ixx  Transcendental.ixx  TwoD.ixx
Capability/Math/Backends/: LWC.impl.cppm  Storage.impl.cppm
Capability/Math/Interface/: Compute.ixx  LWC.ixx  Math.ixx  Storage.ixx
Capability/Math/Samples/: ExtendedMathTest.cppm  PacketMathTest.cppm
Capability/Memory/: CMakeLists.txt  README.md
Capability/Memory/Backends/: DebugMemoryResource.cppm  FrameAllocator.cppm  NumaArena.cppm  PoolAllocator.cppm  SmallObjectAllocator.cppm  StackAllocator.cppm  SystemAllocator.cppm  ThreadCache.cppm
Capability/Memory/Interface/: Allocator.ixx  ConcurrentContainers.ixx  DebugMemoryResource.ixx  Definitions.ixx  FrameAllocator.ixx  IMemoryResource.ixx  Memory.ixx  NumaArena.ixx  OwnedMemoryBlock.ixx  PoolAllocator.ixx  SmallObjectAllocator.ixx  StackAllocator.ixx  ThreadCache.ixx
Capability/Profiling/: CMakeLists.txt
Capability/Profiling/Interface/: Profiling.ixx
Capability/Random/: CMakeLists.txt
Capability/Random/Interface/: Context.ixx  Core.ixx  Distribution.ixx  Engines.ixx  Random.ixx
Docs/: TODO.md  (+10 more)
Engine/App/: Cargo.toml
Engine/App/cache/: last_project.txt
Engine/App/src/: main.rs
Engine/Physics/: CMakeLists.txt
Engine/Physics/Docs/: 宏观设计.md
Engine/Physics/Interface/: BroadPhase.ixx  Collision.ixx  Physics.ixx  Raycast.ixx  Types.ixx  World.ixx
Engine/Renderer/: CMakeLists.txt  Cargo.toml
Engine/Renderer/API/: lib.rs
Engine/Renderer/Docs/: 宏观设计.md
Engine/Renderer/Interface/: CommandList.ixx  FrameGraph.ixx  RHI.API.ixx  RHI.Types.ixx  RHI.ixx  Renderer.ixx  Runner.ixx  Simple.ixx  Types.ixx  Validator.ixx
Engine/Resource/: CMakeLists.txt  README.md
Engine/Resource/Interface/: Cache.ixx  Handle.ixx  Manager.ixx  Resource.ixx  StreamLoader.ixx  Versioning.ixx
Engine/Runtime/: CMakeLists.txt
Engine/Runtime/Docs/: 引擎层总览.md  改造报告.md
Engine/Runtime/Interface/: Engine.ixx  Runtime.ixx  TaskHook.ixx  Types.ixx
Engine/Runtime/Samples/: ChainSmoke.cppm  IntegrationSmoke.cppm  LoopSmoke.cppm  MainlineARuntime.cppm
Engine/Scene/: CMakeLists.txt  README.md
Engine/Scene/Interface/: Component.ixx  Scene.ixx  Transform.ixx  Types.ixx  View.ixx  World.ixx
Foundation/Cap/: Cargo.toml
Foundation/Cap/Algorithms/: Cargo.toml
Foundation/Cap/Concurrency/: Cargo.toml
Foundation/Cap/Config/: Cargo.toml
Foundation/Cap/Containers/: Cargo.toml
Foundation/Cap/Crypto/: Cargo.toml
Foundation/Cap/IO/: Cargo.toml
Foundation/Cap/Identifier/: Cargo.toml
Foundation/Cap/Log/: Cargo.toml
Foundation/Cap/Math/: Cargo.toml  README.md
Foundation/Cap/Memory/: Cargo.toml
Foundation/Cap/Path/: Cargo.toml
Foundation/Cap/Random/: Cargo.toml
Foundation/Cap/Reflection/: Cargo.toml
Foundation/Cap/Serialization/: Cargo.toml
Foundation/Cap/Stream/: Cargo.toml
Foundation/Prm/: Cargo.toml
Foundation/Prm/Audio/: Cargo.toml
Foundation/Prm/Clipboard/: Cargo.toml
Foundation/Prm/Debug/: Cargo.toml
Foundation/Prm/DynamicLibrary/: Cargo.toml
Foundation/Prm/File/: Cargo.toml
Foundation/Prm/HID/: Cargo.toml
Foundation/Prm/IO/: Cargo.toml
Foundation/Prm/Memory/: Cargo.toml
Foundation/Prm/SIMD/: Cargo.toml
Foundation/Prm/Socket/: Cargo.toml
Foundation/Prm/Sync/: Cargo.toml
Foundation/Prm/System/: Cargo.toml
Foundation/Prm/Threading/: Cargo.toml
Foundation/Prm/Time/: Cargo.toml
Foundation/Prm/WSI/: Cargo.toml
Foundation/Prm/Window/: Cargo.toml
Foundation/Sys/Job/: Cargo.toml
Foundation/Sys/RHI/: Cargo.toml  README.md
Foundation/Sys/Scripting/: Cargo.toml  README.md
PCH/: CMakeLists.txt
Primitive/Platform/: CMakeLists.txt
Primitive/Platform/API/: Api.ixx  Platform.ixx
Primitive/Threading/: CMakeLists.txt  README.md
Primitive/Threading/API/: Fiber.ixx  ThreadSync.ixx  Threading.ixx  Types.ixx
Primitive/WSI/: CMakeLists.txt  README.md
Primitive/WSI/API/: WSI.ixx
Sim/Component/: Cargo.toml
Sim/Component/API/: Transform.rs  lib.rs
Sim/Scene/: Cargo.toml
Sim/Scene/API/: lib.rs
System/IR/: CMakeLists.txt  README.md
System/IR/Interface/: Foundation.IRSystem.ixx
System/Job/: CMakeLists.txt
System/Job/API/: Driver.ixx  Event.ixx  Job.ixx  Mutex.ixx  Scheduler.ixx
System/RHI/: CMakeLists.txt  README.md
System/RHI/Interface/: API.ixx  Backend.ixx  Pipeline.ixx  RHI.ixx  Resource.ixx  Sync.ixx  Types.ixx
(+693 files in other folders)
