[workspace]
members = [
    "Foundation/Derive",
    "Foundation/Prm/Threading",
    "Foundation/Prm/Time",
    "Foundation/Cap/Memory",
    "Foundation/Cap/Containers",
    "Foundation/Cap/Concurrency",
    "Foundation/Cap/IO",
    "Foundation/Cap/Algorithms",
    "Foundation/Cap/Path",
    "Foundation/Cap/Stream",
    "Foundation/Sys/Job",
    "Foundation/Sys/Task",
    "Foundation/Sys/VFS",
    "Foundation/Sys/Scripting",
    "Foundation/Sys/RHI",
    "Foundation/Sys/RenderGraph",
    "Foundation/Sys/Memory",
    "Engine/Renderer",
    "Foundation/Sys/Resource",
    "Foundation/Sys/Task/Sample/Smoke",
    "Foundation/Sys/Job/Sample/Smoke",
    "Foundation/Cap/Algorithms/Sample/Bench",
    "Engine/App",
    "Sim/Schema",
    "Sim/Component",
    "Sim/Scene",
    "Sim/Component/Sample/Smoke",
    "Sim/Scene/Sample/Smoke",
]
resolver = "2"

[workspace.lints.rust]
# unsafe_code = "deny" # Configured per module

[workspace.lints.clippy]
disallowed_types = "warn"
