add_module_from_dirs(Concurrency
  INTERFACE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/Interface
  BACKEND_DIRS ${CMAKE_CURRENT_SOURCE_DIR}/Backends/Core
)
target_link_libraries(Concurrency PUBLIC Language Memory Platform System Tools.Tracy)
apply_common_options(Concurrency)

option(BUILD_CONCURRENCY_SAMPLES OFF)
option(BUILD_CONCURRENCY_TRACY_SAMPLE OFF)
if(BUILD_CONCURRENCY_SAMPLES)
  add_executable(Concurrency.TreeExplosion ${CMAKE_CURRENT_SOURCE_DIR}/Samples/TreeExplosion/TreeExplosion.cppm)
  target_link_libraries(Concurrency.TreeExplosion PRIVATE Language Memory Platform System Concurrency)
  apply_common_options(Concurrency.TreeExplosion)
  add_executable(Concurrency.HighPressure ${CMAKE_CURRENT_SOURCE_DIR}/Samples/HighPressure/HighPressure.cppm)
  target_link_libraries(Concurrency.HighPressure PRIVATE Language Memory Platform System Concurrency)
  apply_common_options(Concurrency.HighPressure)
  add_executable(Concurrency.HighPressureThreads ${CMAKE_CURRENT_SOURCE_DIR}/Samples/HighPressureThreads/HighPressureThreads.cppm)
  target_link_libraries(Concurrency.HighPressureThreads PRIVATE Language Memory Platform System Concurrency)
  apply_common_options(Concurrency.HighPressureThreads)
  add_executable(Concurrency.FiberStress ${CMAKE_CURRENT_SOURCE_DIR}/Samples/FiberStress/FiberStress.cppm)
  target_link_libraries(Concurrency.FiberStress PRIVATE Language Memory Platform System Concurrency)
  apply_common_options(Concurrency.FiberStress)

  add_executable(Concurrency.BatchSubmitDemo ${CMAKE_CURRENT_SOURCE_DIR}/Samples/BatchSubmitDemo/BatchSubmitDemo.cppm)
  target_link_libraries(Concurrency.BatchSubmitDemo PRIVATE Language Memory Platform System Concurrency)
  apply_common_options(Concurrency.BatchSubmitDemo)
  add_executable(Concurrency.DriverTimerIo ${CMAKE_CURRENT_SOURCE_DIR}/Samples/DriverTimerIo/DriverTimerIo.cppm)
  target_link_libraries(Concurrency.DriverTimerIo PRIVATE Language Memory Platform System Concurrency)
  apply_common_options(Concurrency.DriverTimerIo)
  add_executable(Concurrency.IOCPFileDemo ${CMAKE_CURRENT_SOURCE_DIR}/Samples/IOCPFileDemo/IOCPFileDemo.cppm)
  target_link_libraries(Concurrency.IOCPFileDemo PRIVATE Language Memory Platform System Concurrency)
  apply_common_options(Concurrency.IOCPFileDemo)
  add_executable(Concurrency.MpscThroughput ${CMAKE_CURRENT_SOURCE_DIR}/Samples/MpscThroughput/MpscThroughput.cppm)
  target_link_libraries(Concurrency.MpscThroughput PRIVATE Language Memory Platform System Concurrency)
  apply_common_options(Concurrency.MpscThroughput)
add_executable(Concurrency.ParallelForTracy ${CMAKE_CURRENT_SOURCE_DIR}/Samples/ParallelForTracy/ParallelForTracy.cppm)
target_link_libraries(Concurrency.ParallelForTracy PRIVATE Language Memory Platform System Concurrency Tools.Tracy)
apply_common_options(Concurrency.ParallelForTracy)
  if(BUILD_CONCURRENCY_TRACY_SAMPLE)
    # TracyTest with manual Tracy integration
    add_executable(Concurrency.TracyTest ${CMAKE_CURRENT_SOURCE_DIR}/Samples/TracyTest/TracyTest.cppm)
    target_link_libraries(Concurrency.TracyTest PRIVATE Language Memory Platform System Concurrency Tools.Tracy)
    apply_common_options(Concurrency.TracyTest)
    
    target_include_directories(Concurrency.TracyTest PRIVATE ${CMAKE_SOURCE_DIR}/ThirdParty/Tracy/public)
    target_compile_definitions(Concurrency.TracyTest PRIVATE TRACY_ENABLE)
  endif()
endif()